--- a/oj9_faq.html
+++ b/oj9_faq.html
@@ -1,3 +1,4 @@
+  <script type="text/javascript" src="./js/oj9_common.js"></script>
 <!DOCTYPE html>
 <!--
 Copyright (c) 2017 IBM Corp. and others
@@ -22,6 +23,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.css">
   <link rel="stylesheet" href="./css/oj9_media.css">
   <link rel="stylesheet" href="./css/oj9_common.css">  
+  <script type="text/javascript" src="./js/oj9_common.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -33,15 +35,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
 </head>
 <body>
   <div id="main-title">
-    <div class="nav">
-      <span><i class="fa fa-bars" aria-hidden="true"></i></span>
-      <div class="nav-content">
-        <p><i class="fa fa-chevron-circle-right f_mini" aria-hidden="true"></i><a class="nav-item" href="index.html">Home</a></p>
-        <p><i class="fa fa-chevron-circle-right f_mini" aria-hidden="true"></i><a class="nav-item" href="oj9_build.html">Build</a></p>
-        <p><i class="fa fa-chevron-circle-right f_mini" aria-hidden="true"></i>FAQ</p>
-        <p><i class="fa fa-chevron-circle-right f_mini" aria-hidden="true"></i><a class="nav-item" href="oj9_resources.html">Resources</a></p>
-      </div>
-    </div>
+    <script type="text/javascript">navigation(document.location.href);</script>	
     <div class="title">
       <a href="index.html">
         <!--<img class="title_icon" src="./assets/openj9_6a.png" alt="Eclipse OpenJ9">-->
