Add slackin capability for automating slack invite
Modifications to the index page to introduce our
slack channel, plus a button to "join". The
join button takes the user to a new page that has
an embedded iframe of "slackin" running on Now.

FAQ page amended to get people to ask questions
on slack rather than create issues.

Footer of all pages changed to add social icon and
link to openj9 slack.

Other minor change. Date added to Whats new entry
about OpenJDK8 and OpenJ9. A further section added
to introduce the slack channel.

Index page: Link added to the Eclipse project page
under "Contribute"

Issue is
https://github.com/eclipse/openj9/issues/627

Issue: #627

Signed-off-by: Sue Chaplain <sue_chaplain@uk.ibm.com>

--- a/index.html
+++ b/index.html
@@ -176,12 +176,14 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
       <div class="f-section-item">
         <div class="f-content-container">
           <p><span class="first-word">Ask questions</span>
-          If you get stuck trying to do something, our developers monitor and participate in <code class="stack">#OpenJ9</code> questions on Stack Overflow. For more general questions about OpenJ9 and how it fits into the OpenJDK ecosystem, we've created an FAQ, which will grow over time.
+          If you get stuck trying to do something, <a href="oj9_joinslack.html">join our Slack channel</a> where you can get some help from the community. Our developers also monitor <code class="stack">#OpenJ9</code> questions on Stack Overflow. For very general questions about OpenJ9 and how it fits into the OpenJDK ecosystem, we've created an <a href="oj9_faq.html">FAQ</a>.
           </p>
         </div>
         <div class="f-button-container">
-          <a class="button external-button left-half" href="oj9_faq.html">FAQ</a>
-          <a class="button external-button right-half" href="https://stackoverflow.com/search?q=%23OpenJ9" target="_blank">Stack Overflow<i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+          <a class="button external-button left-half" href="oj9_joinslack.html">Join</a>
+          <a class="button external-button right-half" href="https://openj9.slack.com/" target="_blank">Slack channel<i class="fa fa-slack" aria-hidden="true"></i></a>
+		  <br>
+		  <a class="button external-button" href="https://stackoverflow.com/search?q=%23OpenJ9" target="_blank">Stack Overflow<i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
         </div>
       </div>
 
@@ -210,7 +212,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
      <div class="f-section-item">
         <div class="f-content-container">
           <p><span class="first-word">Make suggestions</span>
-          If you are using OpenJ9 within a Java runtime environment and you have ideas for improvements, share them. We'd love to hear from you.
+          If you are using OpenJ9 within a Java runtime environment and you have ideas for improvements, share them in our <a href="href="https://openj9.slack.com">slack channel</a> (Join <a href="oj9_joinslack.html">here</a>). We'd love to hear from you.
           </p>
         </div>
       </div>
@@ -218,12 +220,20 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
       <div class="f-section-item">
         <div class="f-content-container">
           <p><span class="first-word">Contribute</span>
-          If you are interested in contributing to the development of this open-source project, check out the contribution guide in our GitHub repository.
+          If you are interested in contributing to the development of this open-source project, check out the <a href="https://github.com/eclipse/openj9/blob/master/CONTRIBUTING.md">contribution guide</a> in our GitHub repository.
+		  You can also find out more about the project, including release plans, at our <a href="https://projects.eclipse.org/projects/technology.openj9">Eclipse Foundation project page</a>.
           </p>
         </div>
       </div>
 
-      <div class="f-section-item">
+	  <div class="f-section-item">
+        <div class="f-button-container">
+          <a class="button external-button" href="https://openj9.slack.com" target="_blank">Slack channel 
+          <i class="fa fa-slack" aria-hidden="true"></i>
+          </a>
+	  </div>
+		
+		
         <div class="f-button-container">
           <a class="button external-button" href="https://dev.eclipse.org/mailman/listinfo/openj9-dev" target="_blank">Eclipse mailing list 
           <i class="fa fa-envelope-o" aria-hidden="true"></i>
@@ -246,6 +256,11 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
     <div class="social-icon">
       <a href="https://github.com/eclipse/openj9" target="_blank" title="Github">
         <i class="fa fa-github" aria-hidden="true" style="font-size: 2.3rem;"></i>
+      </a>
+    </div>
+	<div class="social-icon">
+      <a href="https://openj9.slack.com/" target="_blank" title="Slack">
+      	<i class="fa fa-slack" aria-hidden="true" style="font-size:2rem;"></i>
       </a>
     </div>
     <div class="social-icon">
