--- a/oj9_faq.html
+++ b/oj9_faq.html
@@ -53,7 +53,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
       <h1>Frequently asked questions</h1>
 
       <div class="f-section-item">
-        <span class="intro-text">This FAQ answers common questions about Eclipse OpenJ9 and how it fits into the OpenJDK ecosystem. If you can't find the answer you're looking for, post a query on our <a href="https://github.com/eclipse/openj9/issues" target="_blank"><span class="no-wrap">GitHub issues list<i class="fa fa-github-alt" aria-hidden="true"></i></span></a></span>
+        <span class="intro-text">This FAQ answers common questions about Eclipse OpenJ9 and how it fits into the OpenJDK ecosystem. If you can't find the answer you're looking for, ask a question in our <a href="openj9.slack.com">Slack community</a>, which you can join <a href="oj9_joinslack.html">here</a>.</span>
       </div>
 
       <div class="section-item-faq">
@@ -145,9 +145,14 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
   </main>
 
   <footer>
-    <div class="social-icon">
+	<div class="social-icon">
       <a href="https://github.com/eclipse/openj9" target="_blank" title="Github">
         <i class="fa fa-github" aria-hidden="true" style="font-size: 2.3rem;"></i>
+      </a>
+    </div>
+    <div class="social-icon">
+      <a href="https://openj9.slack.com/" target="_blank" title="Slack">
+      	<i class="fa fa-slack" aria-hidden="true" style="font-size:2rem;"></i>
       </a>
     </div>
     <div class="social-icon">
