--- a/oj9_build.html
+++ b/oj9_build.html
@@ -327,6 +327,11 @@ OpenJDK  - 8593b2f based on )
         <i class="fa fa-github" aria-hidden="true" style="font-size: 2.3rem;"></i>
       </a>
     </div>
+	<div class="social-icon">
+      <a href="https://openj9.slack.com/" target="_blank" title="Slack">
+      	<i class="fa fa-slack" aria-hidden="true" style="font-size:2rem;"></i>
+      </a>
+    </div>
     <div class="social-icon">
       <a href="https://stackoverflow.com/search?q=%23OpenJ9" target="_blank" title="Stack Overflow">
         <i class="fa fa-stack-overflow" aria-hidden="true" style="font-size: 2rem;"></i>
