--- a/oj9_joinslack.html
+++ b/oj9_joinslack.html
@@ -58,8 +58,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
 
 	  <div class="f-section-item">
 		<div class="f-content-container">
-            <iframe src="https://slackin-ozuyyvpmac.now.sh/" height="450"
-			frameborder="0" scrolling="no" id="iframe"> ...
+            <iframe src="https://slackin-ozuyyvpmac.now.sh/" height="450" width="400" style="border:2px solid gray;" scrolling="no" id="iframe"> ...
 			</iframe>
         </div>
 	  </div>
