Add information about OpenJ9 hangouts
Add a what's new
Add an FAQ that lists how to engage, including
hangouts.
Update the home page to reference the hangouts
in "Contributing"
Add social icon for OpenJ9 twitter to all pages

fixes #59

Signed-off-by: Sue Chaplain <sue_chaplain@uk.ibm.com>

--- a/oj9_build.html
+++ b/oj9_build.html
@@ -338,6 +338,11 @@ OpenJDK  - 8593b2f based on )
       	<i class="fa fa-slack" aria-hidden="true" style="font-size:2rem;"></i>
       </a>
     </div>
+	<div class="social-icon">
+      <a href="https://twitter.com/openj9/" target="_blank" title="Twitter">
+      	<i class="fa fa-twitter" aria-hidden="true" style="font-size:2rem;"></i>
+      </a>
+    </div>
     <div class="social-icon">
       <a href="https://stackoverflow.com/search?q=%23OpenJ9" target="_blank" title="Stack Overflow">
         <i class="fa fa-stack-overflow" aria-hidden="true" style="font-size: 2rem;"></i>
