--- a/oj9_whatsnew.html
+++ b/oj9_whatsnew.html
@@ -54,13 +54,28 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-excepti
         <span class="intro-text">Covering anything from project news, events, milestones, and of course... new and cool stuff!</span>
       </div>
 
+	  <div class="f-section-item" id="hangout">
+        <div class="f-content-container">
+          <h3>Come <q>hangout</q> with the OpenJ9 community</h3>
+          <p><i>1st February 2018</i></p>
+          <p>Our regular community hangouts are a great place to meet the team and find out what is going on in the OpenJ9 project. 
+		  Everyone is welcome and the agenda is pretty flexible. Generally we discuss hot topics like release plans, issues, ideas, 
+		  and working processes, but we're open to requests. If you'd like to get involved at some level, why not come along? 
+		  Maybe you have some suggestions, or maybe you'd like to provide some feedback about your experiences using an OpenJDK 
+		  with OpenJ9. If you just want to come and listen, well that's fine too!</p>
+          <p>Schedules, agendas, minutes, and recordings are posted in the OpenJ9 slack workspace, in the #planning channel.
+		  To join slack:  <a href="oj9_joinslack.html">request an invitation</a>.
+          </p>
+        </div>
+      </div>
+	  
       <div class="f-section-item" id="slack_ga">
         <div class="f-content-container">
           <h3>Join us on slack</h3>
           <p><i>5th December 2017</i></p>
-          <p>We're pleased to announce the introduction of a new slack channel, which we hope will become a popular medium for collaborating with the OpenJ9 project team in addition to our Eclipse mailing list. Whether you have questions to ask or experiences to	share, we'd love to hear from you.
+          <p>We're pleased to announce the introduction of a new slack workspace, which we hope will become a popular medium for collaborating with the OpenJ9 project team in addition to our Eclipse mailing list. Whether you have questions to ask or experiences to	share, we'd love to hear from you.
           </p>
-          <p>Join the channel:  <a href="oj9_joinslack.html">request an invitation</a>.
+          <p>Join slack:  <a href="oj9_joinslack.html">request an invitation</a>.
           </p>
         </div>
       </div>
@@ -117,6 +132,11 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-excepti
 	<div class="social-icon">
       <a href="https://openj9.slack.com/" target="_blank" title="Slack">
       	<i class="fa fa-slack" aria-hidden="true" style="font-size:2rem;"></i>
+      </a>
+    </div>
+	<div class="social-icon">
+      <a href="https://twitter.com/openj9/" target="_blank" title="Twitter">
+      	<i class="fa fa-twitter" aria-hidden="true" style="font-size:2rem;"></i>
       </a>
     </div>
     <div class="social-icon">
