--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-excepti
       <div class="f-section-item">
         <div class="f-content-container">
           <p><span class="first-word">Ask questions</span>
-          If you get stuck trying to do something, <a href="oj9_joinslack.html">join our Slack channel</a> where you can get some help from the community. Our developers also monitor <code class="stack">#OpenJ9</code> questions on Stack Overflow. For very general questions about OpenJ9 and how it fits into the OpenJDK ecosystem, we've created an <a href="oj9_faq.html">FAQ</a>.
+          If you get stuck trying to do something, <a href="oj9_joinslack.html">join our Slack workspace</a> where you can get some help from the community. Our developers also monitor <code class="stack">#OpenJ9</code> questions on Stack Overflow. For very general questions about OpenJ9 and how it fits into the OpenJDK ecosystem, we've created an <a href="oj9_faq.html">FAQ</a>.
           </p>
         </div>
         <div class="f-button-container">
           <a class="button external-button left-half" href="oj9_joinslack.html">Join</a>
-          <a class="button external-button right-half" href="https://openj9.slack.com/" target="_blank">Slack channel<i class="fa fa-slack" aria-hidden="true"></i></a>
+          <a class="button external-button right-half" href="https://openj9.slack.com/" target="_blank">OpenJ9 Slack<i class="fa fa-slack" aria-hidden="true"></i></a>
 		  <br>
 		  <a class="button external-button" href="https://stackoverflow.com/search?q=%23OpenJ9" target="_blank">Stack Overflow<i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
         </div>
@@ -212,7 +212,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-excepti
      <div class="f-section-item">
         <div class="f-content-container">
           <p><span class="first-word">Make suggestions</span>
-          If you are using OpenJ9 within a Java runtime environment and you have ideas for improvements, share them in our <a href="href="https://openj9.slack.com">slack channel</a> (Join <a href="oj9_joinslack.html">here</a>). We'd love to hear from you.
+          If you are using OpenJ9 within a Java runtime environment and you have ideas for improvements, share them in our <a href="href="https://openj9.slack.com">slack workspace</a> (Join <a href="oj9_joinslack.html">here</a>). We'd love to hear from you.
           </p>
         </div>
       </div>
@@ -221,6 +221,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-excepti
         <div class="f-content-container">
           <p><span class="first-word">Contribute</span>
           If you are interested in contributing to the development of this open-source project, check out the <a href="https://github.com/eclipse/openj9/blob/master/CONTRIBUTING.md">contribution guide</a> in our GitHub repository.
+		  If you want to find out more about how we work, why not come along to one of our <a href="oj9_whatsnew.html#hangout">hangouts</a>.
 		  You can also find out more about the project, including release plans, at our <a href="https://projects.eclipse.org/projects/technology.openj9">Eclipse Foundation project page</a>.
           </p>
         </div>
@@ -228,7 +229,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-excepti
 
 	  <div class="f-section-item">
         <div class="f-button-container">
-          <a class="button external-button" href="https://openj9.slack.com" target="_blank">Slack channel 
+          <a class="button external-button" href="https://openj9.slack.com" target="_blank">OpenJ9 Slack 
           <i class="fa fa-slack" aria-hidden="true"></i>
           </a>
 	  </div>
@@ -261,6 +262,11 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-excepti
 	<div class="social-icon">
       <a href="https://openj9.slack.com/" target="_blank" title="Slack">
       	<i class="fa fa-slack" aria-hidden="true" style="font-size:2rem;"></i>
+      </a>
+    </div>
+	<div class="social-icon">
+      <a href="https://twitter.com/openj9/" target="_blank" title="Twitter">
+      	<i class="fa fa-twitter" aria-hidden="true" style="font-size:2rem;"></i>
       </a>
     </div>
     <div class="social-icon">
