--- a/oj9_faq.html
+++ b/oj9_faq.html
@@ -53,7 +53,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-excepti
       <h1>Frequently asked questions</h1>
 
       <div class="f-section-item">
-        <span class="intro-text">This FAQ answers common questions about Eclipse OpenJ9 and how it fits into the OpenJDK ecosystem. If you can't find the answer you're looking for, ask a question in our <a href="openj9.slack.com">Slack community</a>, which you can join <a href="oj9_joinslack.html">here</a>.</span>
+        <span class="intro-text">This FAQ answers common questions about Eclipse OpenJ9 and how it fits into the OpenJDK ecosystem. If you can't find the answer you're looking for, ask a question in our <a href="openj9.slack.com">Slack workspace</a>,<br> which you can join <a href="oj9_joinslack.html">here</a>.</span>
       </div>
 
       <div class="section-item-faq">
@@ -95,6 +95,20 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-excepti
           <summary>What license is Eclipse OpenJ9 made available under?</summary>
           <p>The project license is Eclipse Public License 2.0 and Apache License, Version 2.0 (you can choose), but the EPLv2 license has a secondary compatibility for the GPL v2 that is used by OpenJDK. You can combine the two projects and use them together (as OpenJDK's GPL v2 of course). The full license is documented in the <a href="https://github.com/eclipse/openj9/blob/master/LICENSE">LICENSE file</a> and also summarized at the top of virtually every file in the <a href="http://github.com/eclipse/openj9">Eclipse OpenJ9 GitHub repository</a>.
           </p>
+        </details>
+      </div>
+ 
+	  <div class="section-item-faq">
+        <details id="engage">
+          <summary>How can I discuss ideas and provide feedback to this community?</summary>
+          <p>There are a number of ways that you can engage with the OpenJ9 community:
+		   <ul>
+			<li>Join our <a href="https://openj9.slack.com/messages/C8312LCV9/">OpenJ9 slack workspace</a> where you can collaborate directly with developers and other contributors on the project. To join slack, <a href="https://www.eclipse.org/openj9/oj9_joinslack.html">request an invitation.</a></li>
+			<li>Join the <a href="https://dev.eclipse.org/mailman/listinfo/openj9-dev">Eclipse mailing list</a> and post a message to our development community.</li>
+			<li>Come along to our regular hangouts, where you can speak to OpenJ9 developers directly, ask questions, and share your experiences. Schedules and agendas for hangouts are posted in the #planning channel of the OpenJ9 slack workspace.</li>
+			<li>Create an issue in our <a href="https://github.com/eclipse/openj9/issues">OpenJ9 GitHub repository</a>.</li>
+			<li>If you want to keep up to date with the latest news from the project, why not follow us on <a href="https://twitter.com/openj9">twitter</a>, <i>@openj9</i>.</li>
+		   </ul></p>
         </details>
       </div>
  
@@ -153,6 +167,11 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-excepti
     <div class="social-icon">
       <a href="https://openj9.slack.com/" target="_blank" title="Slack">
       	<i class="fa fa-slack" aria-hidden="true" style="font-size:2rem;"></i>
+      </a>
+    </div>
+	<div class="social-icon">
+      <a href="https://twitter.com/openj9/" target="_blank" title="Twitter">
+      	<i class="fa fa-twitter" aria-hidden="true" style="font-size:2rem;"></i>
       </a>
     </div>
     <div class="social-icon">
