--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-excepti
         Want an OpenJDK build that contains an enterprise grade, open source, Java virtual machine?<br/>
         Grab a pre-built binary and try it for yourself...
       </p> 
-      <a class="button external-button" style="width:17em; margin-top:1rem;" href="https://adoptopenjdk.net/releases.html?variant=openjdk9-openj9">Download Now
+      <a class="button external-button" style="width:17em; margin-top:1rem;" href="https://adoptopenjdk.net/releases.html?variant=openjdk8-openj9">Download Now
         <i class="fa fa-download" aria-hidden="true"></i></a>
 		
       <h2 id="performance">
@@ -142,7 +142,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-excepti
           </p>
         </div>
         <div class="f-button-container">
-          <a class="button external-button" href="https://adoptopenjdk.net/releases.html?variant=openjdk9-openj9">Download it
+          <a class="button external-button" href="https://adoptopenjdk.net/releases.html?variant=openjdk8-openj9">Download it
             <i class="fa fa-download" aria-hidden="true"></i></a>
         </div>
       </div>
@@ -168,7 +168,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-excepti
           </p>
         </div>
         <div class="f-button-container">
-          <a class="button external-button" href="https://www.ibm.com/support/knowledgecenter/SSYKE2_9.0.0/welcome/welcome_javasdk_version.html">Read the docs
+          <a class="button external-button" href="https://www.ibm.com/support/knowledgecenter/SSYKE2_8.0.0/com.ibm.java.vm.80.doc/docs/j9_intro.html">Read the docs
             <i class="fa fa-leanpub" aria-hidden="true"></i></a>
         </div>
       </div>
