--- a/oj9_whatsnew.html
+++ b/oj9_whatsnew.html
@@ -16,6 +16,11 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-excepti
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@openj9" />
+  <meta name="twitter:title" content="Eclipse OpenJ9" />
+  <meta name="twitter:description" content="Give your Java application a thrill - run it on OpenJDK with OpenJ9!" />
+  <meta name="twitter:image" content="assets/openj9_hex.png" />
   <title>OpenJ9 - What's new?</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
@@ -23,6 +28,22 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-excepti
   <link rel="stylesheet" href="./css/oj9_media.css">
   <link rel="stylesheet" href="./css/oj9_common.css">  
   <script type="text/javascript" src="./js/oj9_common.js"></script>
+  <script>window.twttr = (function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0],
+    t = window.twttr || {};
+  if (d.getElementById(id)) return t;
+  js = d.createElement(s);
+  js.id = id;
+  js.src = "https://platform.twitter.com/widgets.js";
+  fjs.parentNode.insertBefore(js, fjs);
+
+  t._e = [];
+  t.ready = function(f) {
+    t._e.push(f);
+  };
+
+  return t;
+}(document, "script", "twitter-wjs"));</script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -33,6 +54,7 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-excepti
   </script>
 </head>
 <body>
+<script>twttr.widgets.load()</script>
   <div id="main-title">
     <script type="text/javascript">navigation(document.location.href);</script>	
     <div class="title">
@@ -54,6 +76,28 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-excepti
         <span class="intro-text">Covering anything from project news, events, milestones, and of course... new and cool stuff!</span>
       </div>
 
+	  <div class="f-section-item" id="v0.8">
+        <div class="f-content-container">
+          <h3>Eclipse OpenJ9 version 0.8.0 released</h3>
+          <p><i>14th March 2018</i></p>
+          <p>We're pleased to announce that we have just released our first official version of Eclipse OpenJ9.</p>
+		  <p>Version 0.8.0 supports OpenJ9 embedded in an OpenJDK version 8 binary on all platforms available at
+		  <a href="https://adoptopenjdk.net/releases.html?variant=openjdk8-openj9">AdoptOpenJDK</a>. If you haven't
+		  given it a test drive yet, why not download a build and let us know what you think.</p>
+		  <p>Our <a href="https://projects.eclipse.org/projects/technology.openj9/releases/0.8/plan">release plan</a> 
+		  provides more information about the scope of this release, with any current limitations detailed in the 
+		  <a href="https://github.com/eclipse/openj9/blob/master/doc/release-notes/0.8/0.8.md">release 
+		  notes</a>.</p>
+		  <a href="https://twitter.com/share?ref_src=twsrc%5Etfw
+			url=https%3A%2F%2Fwww.eclipse.com%2Fopenj9%2Foj9_whatsnew.html%v0.8&
+			via=openj9&
+			hashtags=openj9,java&
+			text=Our%20first%20release%20is%20out.%20Why%20not%20give%20it%20a%20test%20drive!" class="twitter-share-button" data-show-count="false">
+			<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+			Tweet</a>
+        </div>
+      </div>
+	  
 	  <div class="f-section-item" id="hangout">
         <div class="f-content-container">
           <h3>Come <q>hangout</q> with the OpenJ9 community</h3>
@@ -67,6 +111,12 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-excepti
 		  <p>To update your Google calendar: <a target="_blank" href="https://calendar.google.com/calendar?cid=YjBnYjB0ZzNxaTZhb3NhZGZnbG0wa3BjY29AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ">add OpenJ9 hangouts</a>.</p>
 		  To join slack:  <a href="oj9_joinslack.html">request an invitation</a>.
           </p>
+		  <a href="https://twitter.com/share?
+			url=https%3A%2F%2Fwww.eclipse.org%2Fopenj9%2Foj9_whatsnew.html%23hangout&
+			via=openj9&
+			hashtags=openj9,java&
+			text=Come%20hangout%20with%20the%20OpenJ9%20community.%20We%20meet%20every%20week%20to%20chat%20and%20would%20love%20you%20to%20join%20us!" class="twitter-share-button" data-show-count="false">
+			Tweet</a>
         </div>
       </div>
 	  
@@ -78,6 +128,12 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-excepti
           </p>
           <p>Join slack:  <a href="oj9_joinslack.html">request an invitation</a>.
           </p>
+		  <a href="https://twitter.com/share?
+			url=https%3A%2F%2Fwww.eclipse.org%2Fopenj9%2Foj9_whatsnew.html%23slack_ga&
+			via=openj9&
+			hashtags=openj9,java&
+			text=Join%20the%20OpenJ9%20community%20on%20Slack%20and%20collaborate%20directly%20with%20our%20developers." class="twitter-share-button" data-show-count="false">
+			Tweet</a>
         </div>
       </div>
 
@@ -111,10 +167,11 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-excepti
           <br>
           <p><strong>The OpenJ9 project leads:</strong>
           <i>Mark, Dan, Peter, and Jonathan</i></p>
-
-
-
-
+            <a class="twitter-share-button" href="https://twitter.com/share?url=https%3A%2F%2Fwww.eclipse.org%2Fopenj9%2Foj9_whatsnew.html%23openjdk8_ga&
+			via=openj9&
+			hashtags=openj9,java&
+			text=Run%20OpenJDK8%20with%20the%20OpenJ9%20VM%20and%20discover%20the%20difference!" data-show-count="false">
+			Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
     </div>
 
