Update resources page with recent articles
Add Mark's JIT verbose logs article and the
Eclipse April newsletter article.

Closes: #83

Signed-off-by: Sue Chaplain <sue_chaplain@uk.ibm.com>

--- a/oj9_resources.html
+++ b/oj9_resources.html
@@ -55,14 +55,20 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
       </div>
       <div class="f-section-item">
         <span class="intro-text1">Follow the links to read recent articles, blog posts, and slides that contain useful information about OpenJ9.<br/>
-        <a href="#contributors"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a> Articles from the OpenJ9 community <br/>
-        <a href="#other"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a> What others are saying about OpenJ9</span>
+        <a href="#contributors"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i></a> Articles from the OpenJ9 community <br/>
+        <a href="#other"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i></a> What others are saying about OpenJ9</span>
       </div>
 
       <div class="f-section-item" id="contributors">
         <div class="f-content-container">
 
           <ul>
+			<li><i><a href="https://mstoodle.github.io/EclipseOpenJ9JitVerboseLogs/" target="_blank">
+              Eclipse OpenJ9 verbose JIT logs</a></i> by Mark Stoodley</li>
+		
+			<li><i><a href="https://www.eclipse.org/community/eclipse_newsletter/2018/april/openj9.php" target="_blank">
+              Eclipse OpenJ9 - not just any Java Virtual Machine</a></i> by Dan Heidinga and Sue Chaplain</li>
+			  
             <li><i><a href="https://github.com/eclipse/openj9-website/blob/master/benchmark/daytrader7.md" target="_blank">
               OpenJDK 8 performance with Eclipse OpenJ9</a></i> by Vijay Sundaresan and Marius Pirvu<br/>
               "Benchmark testing demonstrates significantly better performance for OpenJDK 8 when using the Eclipse OpenJ9 VM, than with the Hotspot VM - just as for OpenJDK 9."</li>
