Add blog links to website
Add button to homepage and
add a what's new.

Issue #80

Signed-off-by: Sue Chaplain <sue_chaplain@uk.ibm.com>

--- a/index.html
+++ b/index.html
@@ -108,8 +108,13 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-excepti
         <a class="button internal-button" href="#get-started">Get started</a>
         <a class="button internal-button" href="#contributing">Get involved</a>
       </div>
+	  
+	   
       <a class="button external-button" style="width:10em; margin-top:1rem;" href="oj9_whatsnew.html">What's new?
         <i class="fa fa-bullhorn" aria-hidden="true"></i></a>
+	  <a class="button external-button" style="width:10em; margin-top:1rem;" href="https://blog.openj9.org" target="_blank">OpenJ9 blog
+        <i class="fa fa-comment-o" aria-hidden="true"></i></a>
+	   
     </div> <!-- end: INTRO -->
 
 
