--- a/oj9_whatsnew.html
+++ b/oj9_whatsnew.html
@@ -63,6 +63,27 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-excepti
         <span class="intro-text">Covering project news, events, milestones, and of course... new and cool stuff!</span>
       </div>
 
+	  <div class="f-section-item" id="openj9blog">
+        <div class="f-content-container">
+          <h3>Introducing the OpenJ9 blog</h3>
+          <p><i>11th May 2018</i></p>
+          <p>We've just started up a <a href=""https://blog.openj9.org" target="_blank">blog</a><i class="fa fa-external-link" aria-hidden="true" style="color: #407471;opacity: 0.7; font-size:.9rem"></i> to share interesting insights 
+		  and information about the Eclipse OpenJ9 project. Over the coming weeks our developers are promising lots of
+		  exciting articles that will lift the lid on many of the great features and capabilities of OpenJ9.</p>
+		  <p>Why not hop over and check it out!</p>
+          
+
+<!-- Keep as-is except edit ID in URL and change "text=" -->
+<a href="https://twitter.com/share?
+url=https%3A%2F%2Fwww.eclipse.org%2Fopenj9%2Foj9_whatsnew.html%23openj9blog&
+via=openj9&
+hashtags=openj9,java&
+text=Introducing%20the%20OpenJ9%20blog"
+class="twitter-share-button"
+data-show-count="false">Tweet</a>
+        </div>
+      </div>
+	  
       <div class="f-section-item" id="otherblogs">
         <div class="f-content-container">
           <h3>What are others saying about OpenJ9?</h3>
