Adapt website colour palette to blend with Eclipse Foundation enhancement
Closes: #91

Signed-off-by: Peter Hayward <pmhayward@uk.ibm.com>

--- a/oj9_faq.html
+++ b/oj9_faq.html
@@ -54,7 +54,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <h1>Frequently asked questions</h1>
 
       <div class="f-section-item">
-        <span class="intro-text">This FAQ answers common questions about Eclipse OpenJ9 and how it fits into the OpenJDK ecosystem. If you can't find the answer you're looking for, ask a question in our <a href="openj9.slack.com">Slack workspace</a>,<br> which you can join <a href="oj9_joinslack.html">here</a>.</span>
+        <span class="intro-text">This FAQ answers common questions about Eclipse OpenJ9 and how it fits into the OpenJDK ecosystem.<br><br>If you can't find the answer you're looking for, ask a question in our <a href="openj9.slack.com">Slack workspace</a>, which you can join <a href="oj9_joinslack.html">here</a>.</span>
       </div>
 
       <div class="section-item-faq">
