--- a/oj9_resources.html
+++ b/oj9_resources.html
@@ -55,9 +55,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <span class="intro-text">Where can I read more about Eclipse OpenJ9?</span>
       </div>
       <div class="f-section-item">
-        <span class="intro-text1">Follow the links to read recent articles, blog posts, and slides that contain useful information about OpenJ9.<br/>
-        <a href="#contributors"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i></a> Articles from the OpenJ9 community <br/>
-        <a href="#other"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i></a> What others are saying about OpenJ9</span>
+        <span class="intro-text1">Follow the links to read recent articles, blog posts, and slides that contain useful information about OpenJ9.<br/><br/>
+        <a href="#contributors"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i> Articles from the OpenJ9 community</a> <br/>
+        <a href="#other"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i> What others are saying about OpenJ9</a></span>
       </div>
 
       <div class="f-section-item" id="contributors">
