--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!--
           <img src="./assets/openj9-hex.png" class="product-logo" />
 -->
-      <span style="font-size:1.4rem; color:#69c1bd;">Low memory footprint<br/>Fast startup time<br/>High application throughput</span>
+      <span style="font-size:1.4rem;color: #65c1bd;">Low memory footprint<br/>Fast startup time<br/>High application throughput</span>
       </p>
       <p style="font-size:1.2rem;">
         Eclipse OpenJ9 is optimized to run Java applications cost-effectively in the cloud.<br/>
@@ -65,7 +65,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <a class="button external-button" style="width:17em; margin-top:1rem;" href="https://adoptopenjdk.net/releases.html?variant=openjdk8-openj9">Download Now
         <i class="fa fa-download" aria-hidden="true"></i></a>
 		
-      <h2 id="performance">
+      <h2 id="performance" style="color: #65c1bd;">
         Give your Java application a thrill<br/>
         Run it on OpenJDK with Eclipse OpenJ9
       </h2> 
@@ -82,6 +82,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </p>
       </div>
 -->
+      <div class="home-button-row">
+      <a class="button external-button" style="width:10em; margin-top:1rem;" href="oj9_whatsnew.html">What's new?
+        <i class="fa fa-bullhorn" aria-hidden="true"></i></a>
+      <a class="button external-button" style="width:10em; margin-top:1rem;" href="oj9_whatsnew.html">OpenJ9 blog 
+        <i class="fa fa-comment-o" aria-hidden="true"></i></a>
+      </div>
+
 
       <div id="read-more-button">
         Learn more <i id="read-more-button-icon" class="fa fa-plus-circle" aria-hidden="true"></i>
@@ -115,16 +122,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div> <!-- end: read-more-text -->
 
       <div class="home-button-row">
-        <a class="button internal-button" href="#get-started">Get started</a>
-        <a class="button internal-button" href="#contributing">Get involved</a>
+        <a class="button internal-button" style="width:10em; margin-top:1rem;" href="#get-started"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i> Get started</a>
+        <a class="button internal-button" style="width:10em; margin-top:1rem;" href="#contributing"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i> Get involved</a>
       </div>
 	  
-	   
-      <a class="button external-button" style="width:10em; margin-top:1rem;" href="oj9_whatsnew.html">What's new?
-        <i class="fa fa-bullhorn" aria-hidden="true"></i></a>
-	  <a class="button external-button" style="width:10em; margin-top:1rem;" href="https://blog.openj9.org" target="_blank">OpenJ9 blog
-        <i class="fa fa-comment-o" aria-hidden="true"></i></a>
-	   
     </div> <!-- end: INTRO -->
 
 
