Fix link to OpenJ9 blog from Whats new
Fix href typo, multi ""

Fixes: #80

Signed-off-by: Sue Chaplain <sue_chaplain@uk.ibm.com>

--- a/oj9_whatsnew.html
+++ b/oj9_whatsnew.html
@@ -76,7 +76,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="f-content-container">
           <h3>Introducing the OpenJ9 blog</h3>
           <p><i>11th May 2018</i></p>
-          <p>We've just started up a <a href=""https://blog.openj9.org" target="_blank">blog</a><i class="fa fa-external-link" aria-hidden="true" style="color: #407471;opacity: 0.7; font-size:.9rem"></i> to share interesting insights 
+          <p>We've just started up a <a href="https://blog.openj9.org" target="_blank">blog</a><i class="fa fa-external-link" aria-hidden="true" style="color: #407471;opacity: 0.7; font-size:.9rem"></i> to share interesting insights 
 		  and information about the Eclipse OpenJ9 project. Over the coming weeks our developers are promising lots of
 		  exciting articles that will lift the lid on many of the great features and capabilities of OpenJ9.</p>
 		  <p>Why not hop over and check it out!</p>
