Fix regression on Blog button
Link needs fixing to point to OpenJ9 blog.

Signed-off-by: Sue Chaplain <sue_chaplain@uk.ibm.com>

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="home-button-row">
       <a class="button external-button" style="width:10em; margin-top:1rem;" href="oj9_whatsnew.html">What's new?
         <i class="fa fa-bullhorn" aria-hidden="true"></i></a>
-      <a class="button external-button" style="width:10em; margin-top:1rem;" href="oj9_whatsnew.html">OpenJ9 blog 
+      <a class="button external-button" style="width:10em; margin-top:1rem;" href="https://blog.openj9.org/">OpenJ9 blog 
         <i class="fa fa-comment-o" aria-hidden="true"></i></a>
       </div>
 
