Fix links to Adopt binaries
Due to changes at the Adopt website
we need to udpate the links to our
downloads.

Signed-off-by: Sue Chaplain <sue_chaplain@uk.ibm.com>

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         Want an OpenJDK build that contains an enterprise grade, open source, Java virtual machine?<br/>
         Grab a pre-built binary and try it for yourself...
       </p> 
-      <a class="button external-button" style="width:17em; margin-top:1rem;" href="https://adoptopenjdk.net/releases.html?variant=openjdk8-openj9">Download Now
+      <a class="button external-button" style="width:17em; margin-top:1rem;" href="https://adoptopenjdk.net/nightly.html?variant=openjdk8&jvmVariant=openj9">Download Now
         <i class="fa fa-download" aria-hidden="true"></i></a>
 		
       <h2 id="performance" style="color: #65c1bd;">
@@ -147,7 +147,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </p>
         </div>
         <div class="f-button-container">
-          <a class="button external-button" href="https://adoptopenjdk.net/releases.html?variant=openjdk8-openj9">Download it
+          <a class="button external-button" href="https://adoptopenjdk.net/nightly.html?variant=openjdk8&jvmVariant=openj9">Download it
             <i class="fa fa-download" aria-hidden="true"></i></a>
         </div>
       </div>
@@ -173,7 +173,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </p>
         </div>
         <div class="f-button-container">
-          <a class="button external-button" href="https://www.ibm.com/support/knowledgecenter/SSYKE2_8.0.0/com.ibm.java.vm.80.doc/docs/j9_intro.html">Read the docs
+          <a class="button external-button" href="https://www.eclipse.org/openj9/docs/" target="_blank">Read the docs
             <i class="fa fa-leanpub" aria-hidden="true"></i></a>
         </div>
       </div>
