--- a/oj9_faq.html
+++ b/oj9_faq.html
@@ -1,3 +1,4 @@
+
   <script type="text/javascript" src="./js/oj9_common.js"></script>
 <!DOCTYPE html>
 <!--
@@ -102,7 +103,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="section-item-faq">
         <details id="support">
           <summary>Which system environments is Eclipse OpenJ9 supported on?</summary>
-          <p>You can find a full support statement in our <a href="https://www.eclipse.org/openj9/docs/openj9_support/" target="_blank">user documentation</a>.</a>.
+          <p>You can find a full support statement in our <a href="https://www.eclipse.org/openj9/docs/openj9_support/" target="_blank">user documentation</a>.
           </p>
         </details>
       </div>
